--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,17 @@
+
 cmake_minimum_required(VERSION 3.18)
-project(RealTimePointCloudNN LANGUAGES CXX CUDA)
+project(RealTimePointCloudNN LANGUAGES C CXX CUDA)
 
 # ----------------------------
 # Compiler setup
 # ----------------------------
+set(PCL_FIND_VISUALIZATION OFF)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Use GCC 12 (optional if environment variables are set)
-# set(CMAKE_C_COMPILER "/usr/bin/gcc-12")
-# set(CMAKE_CXX_COMPILER "/usr/bin/g++-12")
+set(CMAKE_C_COMPILER "/usr/bin/gcc-12")
+set(CMAKE_CXX_COMPILER "/usr/bin/g++-12")
 
 # ----------------------------
 # Find CUDA
@@ -21,7 +23,8 @@ find_package(CUDA REQUIRED)
 # ----------------------------
 # Optional: disable visualization if you don't want VTK/MPI
 # set(PCL_FIND_VISUALIZATION OFF)
-find_package(PCL 1.15 REQUIRED)
+find_package(PCL 1.15
+ REQUIRED)
 
 # Include directories
 include_directories(
