--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ find_package(PCL 1.15
 include_directories(
     ${PCL_INCLUDE_DIRS}
     ${CUDA_INCLUDE_DIRS}
+    ${PROJECT_SOURCE_DIR}/src   # <-- My headers are here
 )
 add_definitions(${PCL_DEFINITIONS})
 
