--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,15 @@
-
 cmake_minimum_required(VERSION 3.18)
 project(RealTimePointCloudNN LANGUAGES C CXX CUDA)
 
 # ----------------------------
 # Compiler setup
 # ----------------------------
-set(PCL_FIND_VISUALIZATION OFF)
-find_package(PCL 1.15 REQUIRED COMPONENTS common io octree)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Use GCC 12 (optional if environment variables are set)
-set(CMAKE_C_COMPILER "/usr/bin/gcc-12")
-set(CMAKE_CXX_COMPILER "/usr/bin/g++-12")
+# Optional: force GCC 12
+# set(CMAKE_C_COMPILER "/usr/bin/gcc-12")
+# set(CMAKE_CXX_COMPILER "/usr/bin/g++-12")
 
 # ----------------------------
 # Find CUDA
@@ -20,18 +17,16 @@ set(CMAKE_CXX_COMPILER "/usr/bin/g++-12")
 find_package(CUDA REQUIRED)
 
 # ----------------------------
-# Find PCL
+# Find PCL (core only)
 # ----------------------------
-# Optional: disable visualization if you don't want VTK/MPI
-# set(PCL_FIND_VISUALIZATION OFF)
-find_package(PCL 1.15
- REQUIRED)
+set(PCL_FIND_VISUALIZATION OFF)
+find_package(PCL 1.15 REQUIRED COMPONENTS common io octree)
 
 # Include directories
 include_directories(
     ${PCL_INCLUDE_DIRS}
     ${CUDA_INCLUDE_DIRS}
-    ${PROJECT_SOURCE_DIR}/include   # <-- My headers are here
+    ${PROJECT_SOURCE_DIR}/src
 )
 add_definitions(${PCL_DEFINITIONS})
 
@@ -40,30 +35,20 @@ add_definitions(${PCL_DEFINITIONS})
 # ----------------------------
 set(SOURCES
     src/main.cpp
+    src/PointCloudProcessor.cpp
     src/PointNetNN.cu
-    src/PointCloudProcessor.cu
     src/IMUProcessor.cpp
 )
 
 # ----------------------------
-# Executable
+# Executable target
 # ----------------------------
-add_executable(RTCP ${SOURCES})
+add_executable(RealTimePointCloud ${SOURCES})
 
 # ----------------------------
 # Link libraries
 # ----------------------------
-target_link_libraries(RTCP
+target_link_libraries(RealTimePointCloud
     ${PCL_LIBRARIES}
     ${CUDA_LIBRARIES}
 )
-
-# ----------------------------
-# Compiler flags (optional)
-# ----------------------------
-# Avoid unsupported compiler errors for newer GCC versions
-# set_target_properties(RTCP PROPERTIES
-#     CUDA_SEPARABLE_COMPILATION ON
-#     CUDA_STANDARD 17
-# )
-# target_compile_options(RTCP PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:--compiler-options -Wall -Wextra -allow-unsupported-compiler>)
